// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/auto-complete/demo/basic.md correctly 1`] = `
<div
  class="ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        input here
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              class="ant-input ant-select-search__field"
              type="text"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/certain-category.md correctly 1`] = `
<div
  class="certain-category-search-wrapper"
  style="width:250px"
>
  <div
    class="ant-select-lg ant-select-lg certain-category-search ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
          style="display:block;user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          input here
        </div>
        <ul>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <span
                class="ant-select-search__field ant-input-affix-wrapper"
              >
                <input
                  class="ant-input"
                  type="text"
                  value=""
                />
                <span
                  class="ant-input-suffix"
                >
                  <svg
                    aria-hidden="true"
                    class="anticon certain-category-icon"
                    data-icon="search"
                    fill="currentColor"
                    height="1em"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M769.2 254.8C726.2 211.7 668.9 188 608 188s-118.2 23.7-161.2 66.8C403.7 297.8 380 355.1 380 416s23.7 118.2 66.8 161.2c43 43.1 100.3 66.8 161.2 66.8s118.2-23.7 161.2-66.8c43.1-43 66.8-100.3 66.8-161.2s-23.7-118.2-66.8-161.2z"
                      fill="none"
                    />
                    <path
                      d="M608 112c-167.9 0-304 136.1-304 304 0 70.3 23.9 135 63.9 186.5L114.3 856.1c-3.1 3.1-3.1 8.2 0 11.3l42.3 42.3c3.1 3.1 8.2 3.1 11.3 0l253.6-253.6C473 696.1 537.7 720 608 720c167.9 0 304-136.1 304-304S775.9 112 608 112zm161.2 465.2C726.2 620.3 668.9 644 608 644s-118.2-23.7-161.2-66.8C403.7 534.2 380 476.9 380 416s23.7-118.2 66.8-161.2c43-43.1 100.3-66.8 161.2-66.8s118.2 23.7 161.2 66.8c43.1 43 66.8 100.3 66.8 161.2s-23.7 118.2-66.8 161.2z"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <b />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/custom.md correctly 1`] = `
<div
  class="ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <textarea
              class="ant-input custom ant-select-search__field"
              placeholder="input here"
              style="height:50px"
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/non-case-sensitive.md correctly 1`] = `
<div
  class="ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        try to type \`b\`
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              class="ant-input ant-select-search__field"
              type="text"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/options.md correctly 1`] = `
<div
  class="ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
  style="width:200px"
>
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
            ant-select-selection--single"
    role="combobox"
  >
    <div
      class="ant-select-selection__rendered"
    >
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        input here
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline"
        >
          <div
            class="ant-select-search__field__wrap"
          >
            <input
              class="ant-input ant-select-search__field"
              type="text"
              value=""
            />
            <span
              class="ant-select-search__field__mirror"
            >
               
            </span>
          </div>
        </li>
      </ul>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none"
      unselectable="on"
    >
      <b />
    </span>
  </div>
</div>
`;

exports[`renders ./components/auto-complete/demo/uncertain-category.md correctly 1`] = `
<div
  class="global-search-wrapper"
  style="width:300px"
>
  <div
    class="ant-select-lg ant-select-lg global-search ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
    style="width:100%"
  >
    <div
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="true"
      class="ant-select-selection
            ant-select-selection--single"
      role="combobox"
    >
      <div
        class="ant-select-selection__rendered"
      >
        <div
          class="ant-select-selection__placeholder"
          style="display:block;user-select:none;-webkit-user-select:none"
          unselectable="on"
        >
          input here
        </div>
        <ul>
          <li
            class="ant-select-search ant-select-search--inline"
          >
            <div
              class="ant-select-search__field__wrap"
            >
              <span
                class="ant-select-search__field ant-input-affix-wrapper"
              >
                <input
                  class="ant-input"
                  type="text"
                  value=""
                />
                <span
                  class="ant-input-suffix"
                >
                  <button
                    class="ant-btn search-btn ant-btn-primary ant-btn-lg"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="anticon"
                      data-icon="search"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M769.2 254.8C726.2 211.7 668.9 188 608 188s-118.2 23.7-161.2 66.8C403.7 297.8 380 355.1 380 416s23.7 118.2 66.8 161.2c43 43.1 100.3 66.8 161.2 66.8s118.2-23.7 161.2-66.8c43.1-43 66.8-100.3 66.8-161.2s-23.7-118.2-66.8-161.2z"
                        fill="none"
                      />
                      <path
                        d="M608 112c-167.9 0-304 136.1-304 304 0 70.3 23.9 135 63.9 186.5L114.3 856.1c-3.1 3.1-3.1 8.2 0 11.3l42.3 42.3c3.1 3.1 8.2 3.1 11.3 0l253.6-253.6C473 696.1 537.7 720 608 720c167.9 0 304-136.1 304-304S775.9 112 608 112zm161.2 465.2C726.2 620.3 668.9 644 608 644s-118.2-23.7-161.2-66.8C403.7 534.2 380 476.9 380 416s23.7-118.2 66.8-161.2c43-43.1 100.3-66.8 161.2-66.8s118.2 23.7 161.2 66.8c43.1 43 66.8 100.3 66.8 161.2s-23.7 118.2-66.8 161.2z"
                      />
                    </svg>
                  </button>
                </span>
              </span>
              <span
                class="ant-select-search__field__mirror"
              >
                 
              </span>
            </div>
          </li>
        </ul>
      </div>
      <span
        class="ant-select-arrow"
        style="user-select:none;-webkit-user-select:none"
        unselectable="on"
      >
        <b />
      </span>
    </div>
  </div>
</div>
`;
